# polyglot-type-system

./: .gitignore  README.md  README_EXAMPLES.md  gen.py  pyproject.toml  requirements.txt  run_all_examples.sh  run_examples.sh  run_examples_simple.sh  setup.py
examples/: advanced_cpp_types.hpp  advanced_type_extraction.py  batch_processing.py  binding_generator.py  cicd_integration.py  cross_language_mapping.py  extract_types.py  function_chain_examples.py  rag_search_examples.py  serialization_generator.py  type_analysis_tools.py
examples/sample_cpp_code/: vector_utils.hpp
src/converters/: cpp_to_polyglot.py
src/extractors/: clang_utils.py  cpp_extractor.py
src/storage/: rag_store.py
src/types/: __init__.py  polyglot_types.py
tests/: test_cpp_extraction.py
